# ZeusIX

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: pages.yml  release.yml
apps/desktop/: package.json  svelte.config.js
apps/desktop/src/: app.css  app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: crypto.rs  keystore.rs  mod.rs  ptt.rs  screencap.rs  storage.rs  tray.rs
apps/desktop/src-tauri/src/plugins/: mod.rs
apps/desktop/src/lib/components/: AnimatedAvatar.svelte  ChannelList.svelte  ChatArea.svelte  CodeBlock.svelte  ContextMenu.svelte  CreateChannelModal.svelte  CreateGroupDmModal.svelte  CreateServerModal.svelte  DeleteServerConfirmModal.svelte  DmChatArea.svelte  EditChannelModal.svelte  FriendsPage.svelte  ImageCropModal.svelte  IncomingCallModal.svelte  InviteModal.svelte  MembersSidebar.svelte  MentionDropdown.svelte  MessageInput.svelte  MessageList.svelte  ProfileEditModal.svelte  ProfilePopup.svelte  PurgeMessagesModal.svelte  ScreenSharePicker.svelte  ServerDropdownMenu.svelte  ServerRail.svelte  ServerSettingsModal.svelte  Sidebar.svelte  Titlebar.svelte  UserPanel.svelte  UserSettingsModal.svelte  (+2 more)
apps/desktop/src/routes/: +layout.svelte
site/: package.json  svelte.config.js
site/src/: app.css  app.html
site/src/lib/: i18n.ts
site/src/routes/: +page.svelte
site/static/: robots.txt  sitemap.xml
(+36 files in other folders)
