[package]
name = "zeusix-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "zeusix_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
sqlcipher = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-stronghold = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
device_query = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "1"
parking_lot = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
